change jvm.options template to ensure elasticsearch starts