@@ -10,6 +10,14 @@ dpkg -s chef-backend &> /dev/null || dpkg -i /vagrant/chef-backend_*.deb
 # Create cluster configuration file
 echo "publish_address '$ipaddr'" >> /etc/chef-backend/chef-backend.rb
 
+#Modify embedded cookbooks to change ElasticSearch jvm.options
+esjvmopts = "/opt/chef-backend/embedded/cookbooks/chef-backend/templates/default/es_jvm.opts.erb"
+cat >> $esjvmopts <<EOF 
+-XX:+UnlockExperimentalVMOptions
+-XX:+UseZGC
+EOF
+sed -i '/ConcMark/d;/CMS/d' $esjvmopts
+
 # Initialize the cluster
 chef-backend-ctl create-cluster --accept-license --yes
 
